correct UMI badge alignment in header

--- a/shared/ui/styles/stream.less
+++ b/shared/ui/styles/stream.less
@@ -202,53 +202,33 @@
 			scroll-snap-type: y mandatory;
 			scroll-snap-points-y: repeat(18px);
 		}
-		.umis {
+		.mentions-badge,
+		.unread-badge {
+			background: @background-color-umi;
+			border-radius: 12.5px;
+			color: white;
+			padding: 1px 4px;
+			display: inline-block;
+			margin-left: 5px;
+			font-size: 11px;
+			min-width: 17px;
 			position: relative;
-			.unread-badge {
-				width: 17px;
-				height: 17px;
-				border-radius: 17px;
-				background: @background-color-umi;
-				display: inline-block;
-				// vertical-align: -12px;
-				// margin-left: -9px;
-				// position: absolute;
-				// bottom: -9px;
-				// right: -9px;
-				vertical-align: 4px;
-				margin-left: 3px;
-				&::before {
-					content: "";
-					display: block;
-					position: absolute;
-					width: 3px;
-					height: 3px;
-					background: white;
-					bottom: 7px;
-					right: 7px;
-					border-radius: 3px;
-				}
-			}
-			.mentions-badge {
-				// background-color: @text-color-info-muted;
-				background: @background-color-umi;
-				border-radius: 12.5px;
-				// vertical-align: 3px;
-				color: white;
-				padding: 1px 4px;
-				display: inline-block;
-				margin-left: 5px;
-				font-size: 11px;
-				min-width: 17px;
-				// position: absolute;
-				// bottom: -9px;
-				// right: -9px;
+		}
+		.unread-badge {
+			color: @background-color-umi;
+
+			&::before {
+				content: "";
+				display: block;
+				position: absolute;
+				width: 3px;
+				height: 3px;
+				background: white;
+				top: 7px;
+				left: 7px;
+				border-radius: 3px;
 			}
 		}
-		// x.umis.unread {
-		// 	background-color: @text-color;
-		// 	color: @base-background-color;
-		// }
 
 		.panel {
 			transition: opacity 0.2s;
